# Projects

./: README.md
AVRAnalogControl/: AnalogcontrolXYZ.c  README.md
FPGA/FIRFilter/: Comp.m  FPGADataRead.m  Project.tcl  README.md  ReadMe.txt  WifiRead.m  WifiWrite.m
FPGA/FIRFilter/sources/: const.xdc  pkg.vhd  tb_Read.vhd  tb_filter.vhd  tb_write.vhd  top.vhd
FPGA/FPGA/MovingAverageFilter/: README.md
KiCad/: MixSigCouse-KiCad-Files.rar  NotesBasic.org  NotesMixedSignal.org  README.org
KiCad/MixSigCouse-KiCad-Files/: 031-5640.stp  ADC.kicad_sch  CMC-1206.kicad_mod  Nemesis-MixSigPCB.kicad_pcb  Nemesis-MixSigPCB.kicad_pro  Power.kicad_sch  VSSOP-10.kicad_mod
KiCad/MixSigCouse-KiCad-Files/Gerber/: Nemesis-MixSigPCB-B_Cu.gbr  Nemesis-MixSigPCB-B_Mask.gbr  Nemesis-MixSigPCB-B_Paste.gbr  Nemesis-MixSigPCB-In1_Cu.gbr  (+3 more)
KiCad/MixedSignalHardwareDesign/: 1206USB_COC.step  31-5540.stp  597-7701-207F_DIA.step  DAC.kicad_sch  HRO-TYPE-C-31-M-12.step  IND_MWSA0603S_SNL.step  MCU.kicad_sch  Nemesis-MixSigPCB.kicad_prl  Nemesis-MixSigPCB.kicad_pro  Nemesis-MixSigPCB.kicad_sch  fp-info-cache
OpenCV-C++/: README.md
OpenCV-C++/1DisplayImage/: CMakeLists.txt  DisplayImage.cpp  README.md
OpenCV-C++/2ImageCrop/: DisplayImage.cpp
OpenCV-C++/3HistogramEqualisation/: DisplayImage.cpp
OpenCV-C++/4aContrastAndBrightnessControl/: DisplayImage.cpp
OpenCV-C++/4bThresholding/: DisplayImage.cpp
OpenCV-C++/4cMorphology/: DisplayImage.cpp
OpenCV-C++/4dLaplacian/: DisplayImage.cpp
OpenCV-C++/4eImageMoments/: DisplayImage.cpp
OpenCV-C++/4fCannyEdgeDetection/: DisplayImage.cpp
(+96 files in other folders)
