cmake_minimum_required(VERSION 3.0)
project( DisplayImage )
find_package( OpenCV REQUIRED )
##set(OpenCV_INCLUDE_DIRS "/usr/local/OpenCV")
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories ( ~/Downloads/OpenCV/ )
add_executable( DisplayImage DisplayImage.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
